fix: 룰엔진 추천과 AI 추천 예산 통일 (#73)
* style: 공통 컬러 기반 UI 스타일 정리

* style: 고객 상세 프로필 UI 수정

* fix: 룰 엔진과 AI추천 예산 통일

* fix: 룰 엔진과 AI추천 카테고리 이름 통일

* fix: 룰 엔진 담보 조합 로직 수정

---------

Co-authored-by: wnstkd704 <wnstkd704@gamil.com>